@@ -4,6 +4,7 @@ import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.FilePath;
 import hudson.model.Computer;
+import hudson.model.TaskListener;
 import hudson.util.StreamTaskListener;
 import jakarta.servlet.ServletException;
 import java.io.ByteArrayOutputStream;
@@ -19,7 +20,6 @@ import java.util.regex.Pattern;
 import jenkins.model.Jenkins;
 import net.sf.json.JSONObject;
 import net.sf.json.JSONSerializer;
-import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.plugins.scriptler.Messages;
 import org.jenkinsci.plugins.scriptler.ScriptlerManagement;
 import org.jenkinsci.plugins.scriptler.config.Parameter;
@@ -37,17 +37,15 @@ import org.jenkinsci.plugins.scriptsecurity.scripts.languages.GroovyLanguage;
  * @author Dominik Bartholdi (imod)
  *
  */
-public class ScriptHelper {
+public final class ScriptHelper {
 
     private static final Logger LOGGER = Logger.getLogger(ScriptHelper.class.getName());
 
     private static final Pattern SCRIPT_META_PATTERN = Pattern.compile(".*BEGIN META(.+?)END META.*", Pattern.DOTALL);
-    private static final Map<String, Class<?>> JSON_CLASS_MAPPING = new HashMap<>();
+    private static final Map<String, Class<?>> JSON_CLASS_MAPPING =
+            Map.of("authors", Author.class, "parameters", Parameter.class);
 
-    static {
-        JSON_CLASS_MAPPING.put("authors", Author.class);
-        JSON_CLASS_MAPPING.put("parameters", Parameter.class);
-    }
+    private ScriptHelper() {}
 
     @NonNull
     public static String readScriptFromFile(@NonNull Path path) throws IOException {
@@ -67,15 +65,15 @@ public class ScriptHelper {
      *            should the script sources be loaded too?
      * @return the script - <code>null</code> if the id is not set or the script with the given id can not be resolved
      */
-    public static @CheckForNull Script getScript(String id, boolean withSrc) {
-        if (StringUtils.isBlank(id)) {
+    public static @CheckForNull Script getScript(@CheckForNull String id, boolean withSrc) {
+        if (id == null || id.isBlank()) {
             return null;
         }
         Script s = ScriptlerConfiguration.getConfiguration().getScriptById(id);
         if (withSrc && s != null) {
             Path scriptSrc = ScriptlerManagement.getScriptDirectory2().resolve(s.getScriptPath());
             try {
-                s.setScript(readScriptFromFile(scriptSrc));
+                s.setScriptText(readScriptFromFile(scriptSrc));
             } catch (IOException e) {
                 LOGGER.log(Level.SEVERE, Messages.scriptSourceNotFound(id));
             }
@@ -83,23 +81,20 @@ public class ScriptHelper {
         return s;
     }
 
-    /**
-     * @since TODO
-     */
-    public static void putScriptInApprovalQueueIfRequired(String scriptSourceCode) {
-        // we cannot use sandbox since the script is potentially sent to slaves
+    public static void putScriptInApprovalQueueIfRequired(@NonNull String scriptSourceCode) {
+        // we cannot use sandbox since the script is potentially sent to agents
         // and the sandbox mode is not meant to be used with remoting
         ScriptApproval.get()
                 .configuring(
                         scriptSourceCode,
                         GroovyLanguage.get(),
-                        ApprovalContext.create().withCurrentUser());
+                        ApprovalContext.create().withCurrentUser(),
+                        true);
     }
 
     /**
      * @param scriptSourceCode Source code that must be approved
      * @return true if the script was approved or created by a user with RUN_SCRIPT permission
-     * @since TODO
      */
     public static boolean isApproved(@CheckForNull String scriptSourceCode) {
         return isApproved(scriptSourceCode, true);
@@ -110,7 +105,6 @@ public class ScriptHelper {
      * @param putInApprovalQueueIfNotApprovedYet true means we try to know if the user has permission
      *                                          to approve the script automatically in case it was not approved yet
      * @return true if the script is approved
-     * @since TODO
      */
     public static boolean isApproved(
             @CheckForNull String scriptSourceCode, boolean putInApprovalQueueIfNotApprovedYet) {
@@ -136,66 +130,62 @@ public class ScriptHelper {
         }
     }
 
-    public static String runScript(String[] slaves, String scriptTxt, @NonNull Collection<Parameter> parameters)
+    /**
+     * @deprecated Use {@link #runScript(List, String, Collection)} instead.
+     */
+    @Deprecated(since = "381")
+    public static String runScript(String[] computers, String scriptText, @NonNull Collection<Parameter> parameters)
             throws IOException, ServletException {
-        StringBuffer output = new StringBuffer();
-        for (String slave : slaves) {
-            LOGGER.log(Level.FINE, "here is the node -> " + slave);
+        return runScript(Arrays.asList(computers), scriptText, parameters);
+    }
+
+    public static String runScript(List<String> computers, String scriptText, @NonNull Collection<Parameter> parameters)
+            throws IOException, ServletException {
+        StringBuilder output = new StringBuilder();
+        for (String computer : computers) {
+            LOGGER.log(Level.FINE, "here is the node -> {0}", computer);
             output.append("___________________________________________\n");
-            output.append("[" + slave + "]:\n");
-            output.append(ScriptHelper.runScript(slave, scriptTxt, parameters));
+            output.append("[").append(computer).append("]:\n");
+            output.append(ScriptHelper.runScript(computer, scriptText, parameters));
         }
         output.append("___________________________________________\n");
         return output.toString();
     }
 
     /**
-     * Runs the execution on a given slave.
+     * Runs the execution on a given agent.
      *
      * @param node
      *            where to run the script.
      * @param scriptTxt
      *            the script (groovy) to be executed.
      * @return the output
-     * @throws IOException
-     * @throws ServletException
      */
     public static String runScript(String node, String scriptTxt, @NonNull Collection<Parameter> parameters)
             throws IOException, ServletException {
 
-        Object output = "[no output]";
         ByteArrayOutputStream sos = new ByteArrayOutputStream();
         if (node != null && scriptTxt != null) {
 
             try {
                 Computer comp = Jenkins.get().getComputer(node);
-                if (comp == null && "(master)".equals(node)) {
-                    output = FilePath.localChannel.call(new GroovyScript(
-                            scriptTxt, parameters, false, new StreamTaskListener(sos, StandardCharsets.UTF_8)));
-                } else if (comp == null) {
-                    output = Messages.node_not_found(node) + "\n";
-                } else {
-                    if (comp.getChannel() == null) {
-                        output = Messages.node_not_online(node) + "\n";
-                    } else {
-                        output = comp.getChannel()
-                                .call(new GroovyScript(
-                                        scriptTxt,
-                                        parameters,
-                                        false,
-                                        new StreamTaskListener(sos, StandardCharsets.UTF_8)));
-                    }
+                TaskListener listener = new StreamTaskListener(sos, StandardCharsets.UTF_8);
+                if (comp == null && "(controller)".equals(node)) {
+                    FilePath.localChannel.call(new GroovyScript(scriptTxt, parameters, false, listener));
+                } else if (comp != null && comp.getChannel() != null) {
+                    comp.getChannel().call(new GroovyScript(scriptTxt, parameters, false, listener));
                 }
 
             } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
                 throw new ServletException(e);
             }
         }
-        return new String(sos.toByteArray(), StandardCharsets.UTF_8);
+        return sos.toString(StandardCharsets.UTF_8);
     }
 
     /**
-     * Returns the meta info of a script body, the meta info has to follow the convention at https://github.com/jenkinsci/jenkins-scripts/tree/master/scriptler
+     * Returns the meta info of a script body, which must follow <a href="https://github.com/jenkinsci/jenkins-scripts/tree/master/scriptler">the convention</a>
      *
      * @param fullScriptBody
      *            the script to extract the meta info from
